# crewforge

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_SPEC.md  DESIGN.md  IMPECCABLE_SETUP.md  PRODUCT.md  PROJECT_VISION.md  README.md  TODO.md  TOOLS_DESIGN.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/crewforge-agents/: SKILL.md
.claude/skills/crewforge-api/: SKILL.md
.claude/skills/crewforge-architecture/: SKILL.md
.claude/skills/crewforge-frontend/: SKILL.md
.claude/skills/crewforge-memory/: SKILL.md
.claude/skills/crewforge-orchestration/: SKILL.md
backend/: __init__.py
backend/app/: __init__.py  config_loader.py  main.py  settings.py
backend/app/api/: __init__.py  agents.py  crews.py  runs.py
backend/app/engine/: __init__.py  events.py  graph_builder.py  json_utils.py  planner.py  prompt_utils.py  runner.py  state.py
backend/app/llm/: __init__.py  ollama_client.py
backend/app/memory/: __init__.py  crew_memory.py
backend/app/models/: __init__.py  agent.py  crew.py  run.py  system_role.py
backend/app/persistence/: __init__.py  run_store.py
config/agents/: forensics.yaml  threat_intel.yaml  triage.yaml
config/crews/: soc_crew.yaml
config/system_roles/: leader.yaml  manager.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ui.tsx  (+7 more)
scripts/: run_crew.py
tests/: _helpers.py  test_config_loader.py  test_engine.py  test_planner.py  test_prompt_utils.py  test_run_store.py
(+13 files in other folders)
